manifests/services/kavita/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kavita
  namespace: kavita
spec:
  type: ClusterIP
  selector: {}
  ports:
    - name: http
      port: 5500
      protocol: TCP
      targetPort: 5500
---
apiVersion: v1
kind: Endpoints
metadata:
  name: kavita
  namespace: kavita
subsets:
  - addresses:
      - ip: 100.69.242.81
    ports:
      - name: http
        port: 5500
        protocol: TCP
