manifests/services/kavita/ingress.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kavita
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kavita
  namespace: kavita
  annotations:
    cert-manager.io/cluster-issuer: "main"
    # 200 Megabytes
    nginx.ingress.kubernetes.io/proxy-body-size: "200m"
    # Ensure client IPs from Cloudflare are preserved
    nginx.ingress.kubernetes.io/configuration-snippet: "real_ip_header CF-Connecting-IP;"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - books.rgst.io
      secretName: books-rgst-io
  rules:
    - host: books.rgst.io
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: kavita
                port:
                  name: http
